update packages for composer and npm

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -17,7 +17,10 @@ $brand-danger: #BF5329;
 
 // Typography
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
-$font-family-sans-serif: 'Raleway', sans-serif;
+$fa-font-path: '~font-awesome/fonts/';
+$font-family-mono: 'Ubuntu Mono', monospace;
+$font-family-sans-serif: 'Ubuntu', sans-serif;
+$font-family-script: 'Architects Daughter', cursive;
 $font-size-base: 14px;
 $line-height-base: 1.6;
 $text-color: #636B6F;
