--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -1,8 +1,12 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,600');
+@import url('https://fonts.googleapis.com/css?family=Architects+Daughter|Ubuntu|Ubuntu+Mono');
 
 // Variables
+@import 'colors';
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+// Font Awesome
+@import '~font-awesome/scss/font-awesome';
