Language pages and CRUD; layout views; minor updates

--- a/resources/assets/sass/_colors.scss
+++ b/resources/assets/sass/_colors.scss
@@ -2,6 +2,13 @@ $black: #000000;
 $white: #FFFFFF;
 $transparent: rgba(0, 0, 0, 0);
 
+// Brand
+$brand-primary: #3097D1;
+$brand-info: #8EB4CB;
+$brand-success: #2AB27B;
+$brand-warning: #CBB956;
+$brand-danger: #BF5329;
+
 // Red
 $red-50: #FFEBEE;
 $red-100: #FFCDD2;
