--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -8,13 +8,6 @@ $navbar-default-border: $laravel-border-color;
 $panel-default-border: $laravel-border-color;
 $panel-inner-border: $laravel-border-color;
 
-// Brands
-$brand-primary: #3097D1;
-$brand-info: #8EB4CB;
-$brand-success: #2AB27B;
-$brand-warning: #CBB956;
-$brand-danger: #BF5329;
-
 // Typography
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 $fa-font-path: '~font-awesome/fonts/';
@@ -26,7 +19,7 @@ $line-height-base: 1.6;
 $text-color: #636B6F;
 
 // Navbar
-$navbar-default-bg: #FFFFFF;
+$navbar-default-bg: $white;
 
 // Buttons
 $btn-default-color: $text-color;
@@ -37,4 +30,4 @@ $input-border-focus: lighten($brand-primary, 25%);
 $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
-$panel-default-heading-bg: #FFFFFF;
+$panel-default-heading-bg: $white;
