--- a/resources/assets/sass/style.scss
+++ b/resources/assets/sass/style.scss
@@ -4,6 +4,7 @@
 // Variables
 @import 'colors';
 @import 'variables';
+@import 'base';
 
 // Bootstrap
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
