--- a/resources/assets/sass/_colors.scss
+++ b/resources/assets/sass/_colors.scss
@@ -302,47 +302,48 @@ $blue-grey-800: #37474F;
 $blue-grey-900: #263238;
 
 // Social
-$social-bebo: #e04646;
-$social-behance: #1769ff;
-$social-blogger: #f57d00;
-$social-delicious: #3399ff;
-$social-deviantart: #4dc47d;
-$social-dribbble: #ea4c89;
-$social-facebook: #3b5998;
-$social-flickr-blue: #0063dc;
-$social-flickr-pink: #ff0084;
-$social-forrst: #5b9a68;
-$social-foursquare: #2d5be3;
-$social-googleplus: #dd4b39;
-$social-gravatar: #1e8cbe;
-$social-hangounts: #0f9d58;
-$social-icq: #7ebd00;
+$social-bebo: #E04646;
+$social-behance: #1769FF;
+$social-blogger: #F57D00;
+$social-delicious: #3399FF;
+$social-deviantart: #4DC47D;
+$social-discord: #7289DA;
+$social-dribbble: #EA4C89;
+$social-facebook: #3B5998;
+$social-flickr-blue: #0063DC;
+$social-flickr-pink: #FF0084;
+$social-forrst: #5B9A68;
+$social-foursquare: #2D5BE3;
+$social-googleplus: #DD4B39;
+$social-gravatar: #1E8CBE;
+$social-hangounts: #0F9D58;
+$social-icq: #7EBD00;
 $social-instagram: #3F729B;
-$social-kippt: #d51007;
-$social-lastfm: #d51007;
-$social-linkedin: #0077b5;
+$social-kippt: #D51007;
+$social-lastfm: #D51007;
+$social-linkedin: #0077B5;
 $social-myspace: #000000;
-$social-path: #ee3423;
-$social-pinterest: #bd081c;
+$social-path: #EE3423;
+$social-pinterest: #BD081C;
 $social-playstation: #003087;
-$social-pocket: #ef4056;
-$social-quora: #a82400;
-$social-rdio: #007dc3;
-$social-reddit: #ff4500;
-$social-rss: #f26522;
-$social-skype: #00aff0;
-$social-snapchat: #fffc00;
-$social-soundcloud: #ff8800;
-$social-spotify: #1db954;
+$social-pocket: #EF4056;
+$social-quora: #A82400;
+$social-rdio: #007DC3;
+$social-reddit: #FF4500;
+$social-rss: #F26522;
+$social-skype: #00AFF0;
+$social-snapchat: #FFFC00;
+$social-soundcloud: #FF8800;
+$social-spotify: #1DB954;
 $social-steam: #0B0B0B;
-$social-stumbleupon: #eb4924;
-$social-tumblr: #35465c;
-$social-twitch: #6441a5;
-$social-twitter: #1da1f2;
-$social-vimeo: #1ab7ea;
-$social-vine: #00b488;
-$social-whatsapp: #25d366;
-$social-wordpress: #21759b;
-$social-xbox: #52b043;
+$social-stumbleupon: #EB4924;
+$social-tumblr: #35465C;
+$social-twitch: #6441A5;
+$social-twitter: #1DA1F2;
+$social-vimeo: #1AB7EA;
+$social-vine: #00B488;
+$social-whatsapp: #25D366;
+$social-wordpress: #21759B;
+$social-xbox: #52B043;
 $social-yahoo: #410093;
-$social-youtube: #cd201f;
+$social-youtube: #CD201F;
